--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,7 @@
     "@stackspulse/protocols": "workspace:*",
     "@t3-oss/env-core": "0.13.4",
     "better-sqlite3": "11.10.0",
+    "consola": "3.4.2",
     "db0": "0.2.4",
     "drizzle-orm": "0.39.3",
     "h3": "1.15.3",
