chore: ansible add aria2 for faster downloads
Added aria2 to the package installation list for improved download speeds.

--- a/ansible/packages/tasks/main.yml
+++ b/ansible/packages/tasks/main.yml
@@ -19,6 +19,8 @@
       - ufw
       - unattended-upgrades
       - vim
+      # Used by stacks-blockchain-docker to download big files faster during initial sync
+      - aria2
     state: latest
     update_cache: yes
     autoremove: yes
