chore: change ansible defaults

--- a/ansible/firewall/tasks/main.yml
+++ b/ansible/firewall/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure ufw defaults
-  ufw:
+  community.general.ufw:
     direction: "{{ item.direction }}"
     policy: "{{ item.policy }}"
   loop:
@@ -10,21 +10,21 @@
       policy: allow
 
 - name: Configure ufw rules
-  ufw:
+  community.general.ufw:
     rule: "{{ item.rule }}"
     port: "{{ item.port }}"
     proto: "{{ item.proto }}"
   loop:
-    - rule: 'limit'
-      port: '22'
-      proto: 'tcp'
-    - rule: 'allow'
-      port: '80'
-      proto: 'tcp'
-    - rule: 'allow'
-      port: '443'
-      proto: 'tcp'
+    - rule: "limit"
+      port: "22"
+      proto: "tcp"
+    - rule: "allow"
+      port: "80"
+      proto: "tcp"
+    - rule: "allow"
+      port: "443"
+      proto: "tcp"
 
 - name: Enable ufw
-  ufw:
+  community.general.ufw:
     state: enabled
