--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -4,9 +4,13 @@
   strategy: free
   vars:
     ssh_key_path: "/path/to/your/local/id_rsa.pub"
+    # Whether to reboot when needed during unattended upgrades.
+    security_autoupdate_reboot: "false"
+    # The time to trigger a reboot, when needed, if security_autoupdate_reboot is set to true. In 24h "hh:mm" clock format.
+    security_autoupdate_reboot_time: "03:00"
   roles:
     - packages
     - docker
     - firewall
-    - ssh
-    - snap
+    - security
+    - reboot_if_needed
