--- a/ansible/security/tasks/main.yml
+++ b/ansible/security/tasks/main.yml
@@ -1,4 +1,16 @@
 ---
+- name: Ensure the user directory exists
+  file:
+    path: /root/.ssh
+    state: directory
+    mode: "0700"
+
+- name: Copy SSH key from local machine to the server
+  copy:
+    src: "{{ ssh_key_path }}"
+    dest: /root/.ssh/authorized_keys
+    mode: "0600"
+
 - name: Update SSH configuration to be more secure
   ansible.builtin.lineinfile:
     dest: "/etc/ssh/sshd_config"
